tests/snapshots/examples_fixtures/type_system__failing__101_missing_colon_let_annotation.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/101_missing_colon_let_annotation.flx
== compile ==
failed (parse)
== diagnostics ==
error[E034]: Missing Type Annotation Colon

Missing `:` in let binding type annotation. Write it as `x: Type`.

  examples/type_system/failing/101_missing_colon_let_annotation.flx:1:7
  |
1 | let x Int = 1
  |       ^^^

Hint:
  Type annotations use `name: Type`.
== stdout ==
<not executed>
